package edu.fiuba.algo3.modelo.tablero.terreno;

public enum TerrenoTipo {
    CAMPO,
    BOSQUE, 
    PASTIZAL, 
    CERRO, 
    MONTANIA, 
    DESIERTO,
}
